--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -27,9 +27,9 @@ jobs:
       matrix:
         include:
           - flippy_name: 61+o
-            release_name: N1-jcnf-mini-61+o.img
+            release_name: N1-dnh-mini-61+o.img
           - flippy_name: 61+
-            release_name: N1-jcnf-mini-61+.img
+            release_name: N1-dnh-mini-61+.img
 
     env:
       FLIPPY_NAME: ${{ matrix.flippy_name }}   
@@ -40,7 +40,7 @@ jobs:
       
     - name: Initialization environment
       run: |     
-        version=$(curl -s "https://api.github.com/repos/Netflixxp/shangyou/releases/latest" | awk -F '"' '/tag_name/{print $4}')
+        version=$(curl -s "https://github.com/dnh128/N1opernwrt/releases/latest" | awk -F '"' '/tag_name/{print $4}')
         
         echo "version=$version"  >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")"  >> $GITHUB_ENV
@@ -52,7 +52,7 @@ jobs:
       run: |
         cd /opt/kernel
         
-        wget  https://github.com/Netflixxp/shangyou/releases/download/$version/openwrt-armvirt-64-default-rootfs.tar.gz
+        wget  https://github.com/dnh128/N1opernwr/releases/download/$version/openwrt-armvirt-64-default-rootfs.tar.gz
                 
     - name: Check Files
       run: |
