--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -52,7 +52,7 @@ jobs:
       run: |
         cd /opt/kernel
         
-        wget  https://github.com/dnh128/N1opernwr/releases/download/$version/openwrt-armvirt-64-default-rootfs.tar.gz
+        wget  https://github.com/dnh128/N1opernwr/releases/download/2021.06.22-0450/openwrt-armvirt-64-default-rootfs.tar.gz
                 
     - name: Check Files
       run: |
